--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hola\n"
+      "hola mundo!\n"
      ]
     }
    ],
    "source": [
     "from src.ml_project_plantilla.interfaces.test import tests\n",
-    "\n",
-    "print(\"hola\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zope.interface as zi"
+    "tests()\n",
+    "print(\"hola mundo!\") \n"
    ]
   },
   {
@@ -38,7 +29,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ml-project-plantilla-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -52,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
